Added underline to links in call-to-action card
Ref https://linear.app/ghost/issue/PROD-1828/qa-regular-links-set-to-black-in-cta-card-are-invisible
- This adds an underline to links in call-to-action cards when the link color is the same as the text color, so that it's always recognisable even if the link style is set to regular.

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -1137,8 +1137,9 @@ img.kg-cta-image {
     font-family: Georgia, serif;
 }
 
-.kg-cta-text a {
+.kg-cta-text a:not(.kg-cta-link-accent .kg-cta-text a) {
     color: #15212A;
+    text-decoration: underline;
 }
 
 .kg-cta-link-accent .kg-cta-text a {
