--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -1149,8 +1149,9 @@ img.kg-cta-image {
     font-family: Georgia, serif;
 }
 
-.kg-cta-text a {
+.kg-cta-text a:not(.kg-cta-link-accent .kg-cta-text a) {
     color: #15212A;
+    text-decoration: underline;
 }
 
 .kg-cta-link-accent .kg-cta-text a {
