Updated imageCorners helper to boolean

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -506,10 +506,8 @@ figure blockquote p {
 
 .feature-image img {
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
         border-radius: 6px;
-    {{else}}
-        border-radius: 0;
     {{/if}}
     {{/hasFeature}}
 }
@@ -718,10 +716,8 @@ a[data-flickr-embed] img {
     height: auto;
     width: auto;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
         border-radius: 6px;
-    {{else}}
-        border-radius: 0;
     {{/if}}
     {{/hasFeature}}
 }
@@ -826,7 +822,7 @@ a[data-flickr-embed] img {
     height: auto !important;
     padding-top: 20px;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
     border-radius: 6px;
     padding-top: 0 !important;
     margin-top: 20px !important;
@@ -840,10 +836,8 @@ a[data-flickr-embed] img {
     display: block;
     text-decoration: none !important;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
         border-radius: 6px;
-    {{else}}
-        border-radius: 0;
     {{/if}}
     {{/hasFeature}}
 }
@@ -852,7 +846,7 @@ a[data-flickr-embed] img {
     background-size: cover;
     min-height: 200px; /* for when images aren't loaded */
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
         border-radius: 6px;
     {{/if}}
     {{/hasFeature}}
@@ -1131,14 +1125,14 @@ table.kg-cta-content-wrapper:not(.kg-cta-bg-none.kg-cta-no-dividers table.kg-cta
 
 /* -------------------------------------
     When removing emailCustomizationAlpha,
-    also remove border-radius: 6px and border-radius: 0 !important;
+    also remove border-radius: 6px;
 ------------------------------------- */
 img.kg-cta-image {
     display: block;
     border-radius: 6px;
     border: 0;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
         border-radius: 6px;
     {{else}}
         border-radius: 0 !important;
@@ -1544,7 +1538,7 @@ img.kg-cta-image {
     height: auto;
     padding: 0;
     border: none;
-    {{#if (eq imageCorners 'rounded')}}
+    {{#if hasRoundedImageCorners}}
         border-radius: 6px;
     {{/if}}
 }
