--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -506,7 +506,9 @@ figure blockquote p {
 
 .feature-image img {
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+        border-radius: 6px;
+    {{/if}}
     {{/hasFeature}}
 }
 
@@ -714,7 +716,9 @@ a[data-flickr-embed] img {
     height: auto;
     width: auto;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+        border-radius: 6px;
+    {{/if}}
     {{/hasFeature}}
 }
 
@@ -818,8 +822,8 @@ a[data-flickr-embed] img {
     height: auto !important;
     padding-top: 20px;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if imageCorners}}
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+    border-radius: 6px;
     padding-top: 0 !important;
     margin-top: 20px !important;
     {{/if}}
@@ -832,7 +836,9 @@ a[data-flickr-embed] img {
     display: block;
     text-decoration: none !important;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+        border-radius: 6px;
+    {{/if}}
     {{/hasFeature}}
 }
 
@@ -840,7 +846,9 @@ a[data-flickr-embed] img {
     background-size: cover;
     min-height: 200px; /* for when images aren't loaded */
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+        border-radius: 6px;
+    {{/if}}
     {{/hasFeature}}
     overflow: hidden;
 }
@@ -1124,10 +1132,10 @@ img.kg-cta-image {
     border-radius: 6px;
     border: 0;
     {{#hasFeature "emailCustomizationAlpha"}}
-    {{#if imageCorners}}
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+        border-radius: 6px;
     {{else}}
-    border-radius: 0 !important;
+        border-radius: 0 !important;
     {{/if}}
     {{/hasFeature}}
 }
@@ -1530,7 +1538,9 @@ img.kg-cta-image {
     height: auto;
     padding: 0;
     border: none;
-    {{imageCorners}};
+    {{#if hasRoundedImageCorners}}
+        border-radius: 6px;
+    {{/if}}
 }
 
 .kg-product-title {
