Refactored EmailRenderer `newsletter.link_style` usage
no issue

`getTemplateData()` returning `linkStyles` value as a CSS rule string was an exception to our other data properties which contain either values or booleans to be used  in the template. We want to keep CSS rules inside the styles template as much as possible so there's no need to switch back and forth between contexts when updating the template.

- added `eq` handlebars helper so we can compare against property values
- updated `EmailRenderer` to pass `linkStyle` as a data property containing the setting value to be used in the template
- moved previous conditionals that built up style rules from `#getLinkStyles()` to `styles.hbs` using the new `eq` helper and `{{linkStyle}}` data property

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -678,7 +678,14 @@ h3.latest-posts-header {
 .post-content a,
 .post-content-sans-serif a {
     color: {{accentColor}};
-    {{linkStyles}}
+    {{#if (eq linkStyle "regular")}}
+    text-decoration: none;
+    {{else if (eq linkStyle "bold")}}
+    text-decoration: none;
+    font-weight: 700;
+    {{else}}
+    text-decoration: underline;
+    {{/if}}
 }
 
 a[data-flickr-embed] img {
