--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -376,6 +376,13 @@ figure blockquote p {
     text-align: center;
 }
 
+{{#if postTitleColor}}
+.post-title-color {
+    color: {{postTitleColor}} !important;
+}
+{{/if}}
+
+
 .post-title-with-excerpt {
     padding-bottom: 8px;
 }
