Fixed post analytics navigation bug
ref https://linear.app/ghost/issue/ONC-978/support-escalation-re-analytics-button

- Customers were unable to access their post analytics at the moment. Clicking the chart icon from the post list lead to the dashboard, instead of the expected post analytics.

--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -73,7 +73,7 @@
                             <li>
                                 <a class="view-browser" href="{{this.post.url}}" target="_blank" rel="noopener noreferrer">View in browser</a>
                             </li>
-                            {{#if (and (gh-user-can-admin this.session.user) this.config.stats)}}
+                            {{#if (and (gh-user-can-admin this.session.user) this.config.stats (feature "trafficAnalytics"))}}
                                 <li>
                                     <LinkTo class="edit-post" @route="posts-x" @model={{this.post.id}}>Switch to Analytics (beta)</LinkTo>
                                 </li>
